*Separar logica de datos y logica de acceso a datos en clases modelo y repositorios *Agregar productos predefinidos a clase inicializadora

--- a/DemoContexCodeFirst/DemoContexCodeFirst.csproj
+++ b/DemoContexCodeFirst/DemoContexCodeFirst.csproj
@@ -105,15 +105,18 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\IProductRepository.cs" />
     <Compile Include="Models\NorthWindDB.cs" />
     <Compile Include="Models\NorthWindInitializer.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ShowProducts.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
